<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="HelloWorld">Hello world</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Crime Name</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime_date</string>
    <string name="call_police">Call Police</string>
    <string name="date_picker_title">Date of Crime</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitles">Show Subtitles</string>
    <string name="hide_subtitles">Hide Subtitles</string>
    <string name="subtitles_format">%1$d crimes</string>
    <string name="require_police">Require Police</string>
    <string name="time_picker_title">Set Time</string>
    <string name="remove_crime">Remove Crime</string>

    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved.</string>
    <string name="crime_report_unsolved">The case is not solved.</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="set_time">SET TIME</string>
    <string name="set_date">SET DATE</string>


</resources>
